// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MavenInstallation groovy renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
  <code-instruction-stub
    class="gl-mb-5"
    copytext="Copy Gradle Groovy DSL install command"
    instruction="implementation 'appGroup:appName:appVersion'"
    label="Gradle Groovy DSL install command"
    trackingaction="copy_gradle_install_command"
    trackinglabel="code_instruction"
  />
  <code-instruction-stub
    copytext="Copy add Gradle Groovy DSL repository command"
    instruction="maven {
  url 'http://gdk.test:3000/api/v4/projects/1/packages/maven'
}"
    label="Add Gradle Groovy DSL repository command"
    multiline="true"
    trackingaction="copy_gradle_add_to_source_command"
    trackinglabel="code_instruction"
  />
</div>
`;

exports[`MavenInstallation kotlin renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
  <code-instruction-stub
    class="gl-mb-5"
    copytext="Copy Gradle Kotlin DSL install command"
    instruction="implementation("appGroup:appName:appVersion")"
    label="Gradle Kotlin DSL install command"
    trackingaction="copy_kotlin_install_command"
    trackinglabel="code_instruction"
  />
  <code-instruction-stub
    copytext="Copy add Gradle Kotlin DSL repository command"
    instruction="maven("http://gdk.test:3000/api/v4/projects/1/packages/maven")"
    label="Add Gradle Kotlin DSL repository command"
    multiline="true"
    trackingaction="copy_kotlin_add_to_source_command"
    trackinglabel="code_instruction"
  />
</div>
`;

exports[`MavenInstallation maven renders all the messages 1`] = `
<div>
  <installation-title-stub
    options="[object Object],[object Object],[object Object]"
    packagetype="maven"
  />
  <p>
    Copy and paste this inside your
    <code>
      pom.xml
    </code>
    <code>
      dependencies
    </code>
    block.
  </p>
  <code-instruction-stub
    copytext="Copy Maven XML"
    instruction=<dependency>
        <groupid>
          appGroup
        </groupid>
        <artifactid>
          appName
        </artifactid>
        <version>
          appVersion
        </version>
      </dependency>
    label=""
    multiline="true"
    trackingaction="copy_maven_xml"
    trackinglabel="code_instruction"
  />
  <code-instruction-stub
    class="gl-mt-5 gl-w-20"
    copytext="Copy Maven command"
    instruction="mvn install"
    label="Maven Command"
    trackingaction="copy_maven_command"
    trackinglabel="code_instruction"
  />
  <h3
    class="gl-text-lg"
  >
    Registry setup
  </h3>
  <p>
    If you haven't already done so, you will need to add the below to your
    <code>
      pom.xml
    </code>
    file.
  </p>
  <code-instruction-stub
    copytext="Copy Maven registry XML"
    instruction=<repositories>
        <repository>
          <id>
            gitlab-maven
          </id>
          <url>
            http://gdk.test:3000/api/v4/projects/1/packages/maven
          </url>
        </repository>
      </repositories>
    label=""
    multiline="true"
    trackingaction="copy_maven_setup_xml"
    trackinglabel="code_instruction"
  />
  For more information on the Maven registry,
  <gl-link-stub
    href="/help/user/packages/maven_repository/_index"
    target="_blank"
  >
    see the documentation
  </gl-link-stub>
  .
</div>
`;
